antlr/SakuraParser.py
# Generated from .\Sakura.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SakuraParser ( Parser ):

    grammarFileName = "Sakura.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'func'", "'pass'", "'return'", 
                     "'.'", "'*'", "'('", "')'", "','", "':'", "';'", "'**'", 
                     "'='", "'['", "']'", "'+'", "'-'", "'/'", "'%'", "'{'", 
                     "'}'", "'<'", "'>'", "'=='", "'>='", "'<='", "'!='", 
                     "'@'", "'->'", "'+='", "'-='", "'*='", "'/='", "'%='" ]

    symbolicNames = [ "<INVALID>", "VAR", "FUNC", "PASS", "RETURN", "DOT", 
                      "STAR", "OPEN_PAREN", "CLOSE_PAREN", "COMMA", "COLON", 
                      "SEMI_COLON", "POWER", "ASSIGN", "OPEN_BRACK", "CLOSE_BRACK", 
                      "ADD", "MINUS", "DIV", "MOD", "OPEN_BRACE", "CLOSE_BRACE", 
                      "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", "LT_EQ", 
                      "NOT_EQ", "AT", "ARROW", "ADD_ASSIGN", "SUB_ASSIGN", 
                      "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "Comment", 
                      "WS", "Newline", "Interger", "Decimal", "Identifier", 
                      "String" ]

    RULE_block = 0
    RULE_literalValue = 1
    RULE_decvar = 2
    RULE_defvar = 3
    RULE_assvar = 4
    RULE_funcArgs = 5
    RULE_funcHead = 6
    RULE_decfunc = 7
    RULE_funcReturn = 8
    RULE_defunc = 9
    RULE_callfunc = 10

    ruleNames =  [ "block", "literalValue", "decvar", "defvar", "assvar", 
                   "funcArgs", "funcHead", "decfunc", "funcReturn", "defunc", 
                   "callfunc" ]

    EOF = Token.EOF
    VAR=1
    FUNC=2
    PASS=3
    RETURN=4
    DOT=5
    STAR=6
    OPEN_PAREN=7
    CLOSE_PAREN=8
    COMMA=9
    COLON=10
    SEMI_COLON=11
    POWER=12
    ASSIGN=13
    OPEN_BRACK=14
    CLOSE_BRACK=15
    ADD=16
    MINUS=17
    DIV=18
    MOD=19
    OPEN_BRACE=20
    CLOSE_BRACE=21
    LESS_THAN=22
    GREATER_THAN=23
    EQUALS=24
    GT_EQ=25
    LT_EQ=26
    NOT_EQ=27
    AT=28
    ARROW=29
    ADD_ASSIGN=30
    SUB_ASSIGN=31
    MULT_ASSIGN=32
    DIV_ASSIGN=33
    MOD_ASSIGN=34
    Comment=35
    WS=36
    Newline=37
    Interger=38
    Decimal=39
    Identifier=40
    String=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PASS(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.PASS)
            else:
                return self.getToken(SakuraParser.PASS, i)

        def SEMI_COLON(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.SEMI_COLON)
            else:
                return self.getToken(SakuraParser.SEMI_COLON, i)

        def Comment(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.Comment)
            else:
                return self.getToken(SakuraParser.Comment, i)

        def decvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.DecvarContext)
            else:
                return self.getTypedRuleContext(SakuraParser.DecvarContext,i)


        def defvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.DefvarContext)
            else:
                return self.getTypedRuleContext(SakuraParser.DefvarContext,i)


        def assvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.AssvarContext)
            else:
                return self.getTypedRuleContext(SakuraParser.AssvarContext,i)


        def decfunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.DecfuncContext)
            else:
                return self.getTypedRuleContext(SakuraParser.DecfuncContext,i)


        def funcReturn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.FuncReturnContext)
            else:
                return self.getTypedRuleContext(SakuraParser.FuncReturnContext,i)


        def defunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.DefuncContext)
            else:
                return self.getTypedRuleContext(SakuraParser.DefuncContext,i)


        def callfunc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.CallfuncContext)
            else:
                return self.getTypedRuleContext(SakuraParser.CallfuncContext,i)


        def getRuleIndex(self):
            return SakuraParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SakuraParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SakuraParser.VAR) | (1 << SakuraParser.FUNC) | (1 << SakuraParser.PASS) | (1 << SakuraParser.RETURN) | (1 << SakuraParser.Comment) | (1 << SakuraParser.Identifier))) != 0):
                self.state = 32
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 22
                    self.match(SakuraParser.PASS)
                    self.state = 23
                    self.match(SakuraParser.SEMI_COLON)
                    pass

                elif la_ == 2:
                    self.state = 24
                    self.match(SakuraParser.Comment)
                    pass

                elif la_ == 3:
                    self.state = 25
                    self.decvar()
                    pass

                elif la_ == 4:
                    self.state = 26
                    self.defvar()
                    pass

                elif la_ == 5:
                    self.state = 27
                    self.assvar()
                    pass

                elif la_ == 6:
                    self.state = 28
                    self.decfunc()
                    pass

                elif la_ == 7:
                    self.state = 29
                    self.funcReturn()
                    pass

                elif la_ == 8:
                    self.state = 30
                    self.defunc()
                    pass

                elif la_ == 9:
                    self.state = 31
                    self.callfunc()
                    pass


                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Interger(self):
            return self.getToken(SakuraParser.Interger, 0)

        def Identifier(self):
            return self.getToken(SakuraParser.Identifier, 0)

        def String(self):
            return self.getToken(SakuraParser.String, 0)

        def Decimal(self):
            return self.getToken(SakuraParser.Decimal, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_literalValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteralValue" ):
                listener.enterLiteralValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteralValue" ):
                listener.exitLiteralValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteralValue" ):
                return visitor.visitLiteralValue(self)
            else:
                return visitor.visitChildren(self)




    def literalValue(self):

        localctx = SakuraParser.LiteralValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_literalValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SakuraParser.Interger) | (1 << SakuraParser.Decimal) | (1 << SakuraParser.Identifier) | (1 << SakuraParser.String))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SakuraParser.VAR, 0)

        def Identifier(self):
            return self.getToken(SakuraParser.Identifier, 0)

        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_decvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecvar" ):
                listener.enterDecvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecvar" ):
                listener.exitDecvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecvar" ):
                return visitor.visitDecvar(self)
            else:
                return visitor.visitChildren(self)




    def decvar(self):

        localctx = SakuraParser.DecvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(SakuraParser.VAR)
            self.state = 40
            self.match(SakuraParser.Identifier)
            self.state = 41
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(SakuraParser.VAR, 0)

        def Identifier(self):
            return self.getToken(SakuraParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(SakuraParser.ASSIGN, 0)

        def literalValue(self):
            return self.getTypedRuleContext(SakuraParser.LiteralValueContext,0)


        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_defvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefvar" ):
                listener.enterDefvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefvar" ):
                listener.exitDefvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefvar" ):
                return visitor.visitDefvar(self)
            else:
                return visitor.visitChildren(self)




    def defvar(self):

        localctx = SakuraParser.DefvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_defvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(SakuraParser.VAR)
            self.state = 44
            self.match(SakuraParser.Identifier)
            self.state = 45
            self.match(SakuraParser.ASSIGN)
            self.state = 46
            self.literalValue()
            self.state = 47
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SakuraParser.Identifier, 0)

        def ASSIGN(self):
            return self.getToken(SakuraParser.ASSIGN, 0)

        def literalValue(self):
            return self.getTypedRuleContext(SakuraParser.LiteralValueContext,0)


        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_assvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssvar" ):
                listener.enterAssvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssvar" ):
                listener.exitAssvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssvar" ):
                return visitor.visitAssvar(self)
            else:
                return visitor.visitChildren(self)




    def assvar(self):

        localctx = SakuraParser.AssvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(SakuraParser.Identifier)
            self.state = 50
            self.match(SakuraParser.ASSIGN)
            self.state = 51
            self.literalValue()
            self.state = 52
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.VAR)
            else:
                return self.getToken(SakuraParser.VAR, i)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.Identifier)
            else:
                return self.getToken(SakuraParser.Identifier, i)

        def ASSIGN(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.ASSIGN)
            else:
                return self.getToken(SakuraParser.ASSIGN, i)

        def literalValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.LiteralValueContext)
            else:
                return self.getTypedRuleContext(SakuraParser.LiteralValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.COMMA)
            else:
                return self.getToken(SakuraParser.COMMA, i)

        def getRuleIndex(self):
            return SakuraParser.RULE_funcArgs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncArgs" ):
                listener.enterFuncArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncArgs" ):
                listener.exitFuncArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncArgs" ):
                return visitor.visitFuncArgs(self)
            else:
                return visitor.visitChildren(self)




    def funcArgs(self):

        localctx = SakuraParser.FuncArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcArgs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SakuraParser.VAR]:
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 60
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                        if la_ == 1:
                            self.state = 54
                            self.match(SakuraParser.VAR)
                            self.state = 55
                            self.match(SakuraParser.Identifier)
                            pass

                        elif la_ == 2:
                            self.state = 56
                            self.match(SakuraParser.VAR)
                            self.state = 57
                            self.match(SakuraParser.Identifier)
                            self.state = 58
                            self.match(SakuraParser.ASSIGN)
                            self.state = 59
                            self.literalValue()
                            pass


                        self.state = 62
                        self.match(SakuraParser.COMMA) 
                    self.state = 67
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 74
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.match(SakuraParser.VAR)
                    self.state = 69
                    self.match(SakuraParser.Identifier)
                    pass

                elif la_ == 2:
                    self.state = 70
                    self.match(SakuraParser.VAR)
                    self.state = 71
                    self.match(SakuraParser.Identifier)
                    self.state = 72
                    self.match(SakuraParser.ASSIGN)
                    self.state = 73
                    self.literalValue()
                    pass


                pass
            elif token in [SakuraParser.CLOSE_PAREN]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncHeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(SakuraParser.FUNC, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.Identifier)
            else:
                return self.getToken(SakuraParser.Identifier, i)

        def OPEN_PAREN(self):
            return self.getToken(SakuraParser.OPEN_PAREN, 0)

        def funcArgs(self):
            return self.getTypedRuleContext(SakuraParser.FuncArgsContext,0)


        def CLOSE_PAREN(self):
            return self.getToken(SakuraParser.CLOSE_PAREN, 0)

        def ARROW(self):
            return self.getToken(SakuraParser.ARROW, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_funcHead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncHead" ):
                listener.enterFuncHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncHead" ):
                listener.exitFuncHead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncHead" ):
                return visitor.visitFuncHead(self)
            else:
                return visitor.visitChildren(self)




    def funcHead(self):

        localctx = SakuraParser.FuncHeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcHead)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SakuraParser.FUNC)
            self.state = 80
            self.match(SakuraParser.Identifier)
            self.state = 81
            self.match(SakuraParser.OPEN_PAREN)
            self.state = 82
            self.funcArgs()
            self.state = 83
            self.match(SakuraParser.CLOSE_PAREN)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SakuraParser.ARROW:
                self.state = 84
                self.match(SakuraParser.ARROW)
                self.state = 85
                self.match(SakuraParser.Identifier)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcHead(self):
            return self.getTypedRuleContext(SakuraParser.FuncHeadContext,0)


        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_decfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecfunc" ):
                listener.enterDecfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecfunc" ):
                listener.exitDecfunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecfunc" ):
                return visitor.visitDecfunc(self)
            else:
                return visitor.visitChildren(self)




    def decfunc(self):

        localctx = SakuraParser.DecfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_decfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.funcHead()
            self.state = 89
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SakuraParser.RETURN, 0)

        def literalValue(self):
            return self.getTypedRuleContext(SakuraParser.LiteralValueContext,0)


        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_funcReturn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncReturn" ):
                listener.enterFuncReturn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncReturn" ):
                listener.exitFuncReturn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncReturn" ):
                return visitor.visitFuncReturn(self)
            else:
                return visitor.visitChildren(self)




    def funcReturn(self):

        localctx = SakuraParser.FuncReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcReturn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SakuraParser.RETURN)
            self.state = 92
            self.literalValue()
            self.state = 93
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcHead(self):
            return self.getTypedRuleContext(SakuraParser.FuncHeadContext,0)


        def OPEN_BRACE(self):
            return self.getToken(SakuraParser.OPEN_BRACE, 0)

        def block(self):
            return self.getTypedRuleContext(SakuraParser.BlockContext,0)


        def CLOSE_BRACE(self):
            return self.getToken(SakuraParser.CLOSE_BRACE, 0)

        def getRuleIndex(self):
            return SakuraParser.RULE_defunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefunc" ):
                listener.enterDefunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefunc" ):
                listener.exitDefunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefunc" ):
                return visitor.visitDefunc(self)
            else:
                return visitor.visitChildren(self)




    def defunc(self):

        localctx = SakuraParser.DefuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_defunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.funcHead()
            self.state = 96
            self.match(SakuraParser.OPEN_BRACE)
            self.state = 97
            self.block()
            self.state = 98
            self.match(SakuraParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallfuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(SakuraParser.Identifier, 0)

        def OPEN_PAREN(self):
            return self.getToken(SakuraParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(SakuraParser.CLOSE_PAREN, 0)

        def SEMI_COLON(self):
            return self.getToken(SakuraParser.SEMI_COLON, 0)

        def literalValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SakuraParser.LiteralValueContext)
            else:
                return self.getTypedRuleContext(SakuraParser.LiteralValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SakuraParser.COMMA)
            else:
                return self.getToken(SakuraParser.COMMA, i)

        def getRuleIndex(self):
            return SakuraParser.RULE_callfunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallfunc" ):
                listener.enterCallfunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallfunc" ):
                listener.exitCallfunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallfunc" ):
                return visitor.visitCallfunc(self)
            else:
                return visitor.visitChildren(self)




    def callfunc(self):

        localctx = SakuraParser.CallfuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_callfunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SakuraParser.Identifier)
            self.state = 101
            self.match(SakuraParser.OPEN_PAREN)
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SakuraParser.Interger, SakuraParser.Decimal, SakuraParser.Identifier, SakuraParser.String]:
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 102
                        self.literalValue()
                        self.state = 103
                        self.match(SakuraParser.COMMA) 
                    self.state = 109
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                self.state = 110
                self.literalValue()
                pass
            elif token in [SakuraParser.CLOSE_PAREN]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 114
            self.match(SakuraParser.CLOSE_PAREN)
            self.state = 115
            self.match(SakuraParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





